--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,7 @@
   "name": "pinguinio/puffin-includes",
   "require": {
 	"mustache/mustache": "~2.7",
-	"phroute/phroute" :  "~2.0",
-	"phpixie/core": "2.*@dev",
-    "phpixie/db": "2.*@dev",
-    "phpixie/orm": "2.*@dev"
+	"phroute/phroute" :  "~2.0"
   },
   "autoload": {
     "psr-4":{
