--- a/composer.json
+++ b/composer.json
@@ -2,15 +2,14 @@
   "name": "pinguinio/puffin-framework",
   "description": "A nice MVC framework utilizing mustache",
   "license": "MIT",
-  "version": "1.0.0-alpha1",
   "require": {
 	"mustache/mustache": "~2.7",
 	"phroute/phroute" :  "~2.0"
   },
   "autoload": {
     "psr-4":{
-      "puffin\\": "src/",
-      "files": ["init.php"]
-    }
+      "puffin\\": "src/"
+    },
+    "files": ["init.php"]
   }
 }
