--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "require": {
 	"mustache/mustache": "~2.7",
-	"phroute/phroute" :  "~2.0"
+	"phroute/phroute" :  "~2.0",
+	"phpmailer/phpmailer": "~5.2"
   },
   "autoload": {
     "psr-4":{
