--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,7 @@
   "license": "MIT",
   "require": {
 	"mustache/mustache": "~2.7",
-	"phroute/phroute" :  "~2.0",
-	"phpmailer/phpmailer": "~5.2"
+	"phroute/phroute" :  "~2.0"
   },
   "autoload": {
     "psr-4":{
