--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,16 @@
 {
 	"name": "pinguinio/puffin-framework",
-	"description": "A nice MVC framework utilizing mustache",
+	"description": "A nice MVC framework, made by nice people.",
 	"license": "MIT",
+	"minimum-stability":"alpha",
 	"require": {
-	"zordius/lightncandy": "dev-master",
-	"mustache/mustache": "~2.7",
-	"phroute/phroute" :	"~2.0"
+		"zordius/lightncandy": "dev-master",
+		"mustache/mustache": "~2.7",
+		"phroute/phroute" :	"~2.0"
 	},
 	"autoload": {
 		"psr-4":{
 			"puffin\\": "src/"
 		}
-	},
-	"minimum-stability":"alpha"
+	}
 }
