--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
 	"require": {
 		"contentasaurus/lightncandy": "dev-master",
 		"mustache/mustache": "~2.7",
-		"mrjgreen/phroute" :	"~2.0"
+		"phroute/phroute" : "~2.0"
 	},
 	"autoload": {
 		"psr-4":{
